objects/AcctSeed__GL_Account_Mapping__c.object
<CustomObject>
    <description>Document the association between a GL Account and a Bank Direct Connect Bank Account.</description>
    <fields>
        <fullName>AcctSeed__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Available_Balance__c</fullName>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>127</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Institution_Id__c</fullName>
        <externalId>true</externalId>
        <label>Financial Institution Id</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Institution__c</fullName>
        <label>Financial Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account__c</fullName>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>GL Account Mappings</relationshipLabel>
        <relationshipName>GL_Account_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set by an automated process. Modifying this field can cause errors to occur when processing bank transactions.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Initial_Start_Date__c</fullName>
        <label>Initial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Refreshed__c</fullName>
        <label>Last Refreshed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Transactional Ledgers are allowed.</errorMessage>
            <filterItems>
                <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Transactional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>GL Account Mappings</relationshipLabel>
        <relationshipName>GL_Account_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yodlee</fullName>
                </value>
                <value>
                    <fullName>Financial File Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GL Account Mapping</label>
    <nameField>
        <displayFormat>GLAM-{00000}</displayFormat>
        <label>GL Account Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Account Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>